# deepclaw

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
deepclaw/: __init__.py  agent.py  approval_state.py  auth.py  bot.py  cli.py  codex_auth.py  compaction.py  config.py  context_report.py  doctor.py  gateway.py  headroom.py  heartbeat.py  local_context.py  middleware.py  oauth.py  project_context.py  runtime_controller.py  runtime_hygiene.py  safety.py  scheduler.py  service.py  sessions.py  state_continuity.py  subagents.py
deepclaw/channels/: base.py  telegram.py
deepclaw/default_skills/browser-automation-pitfalls/: SKILL.md
deepclaw/default_skills/browser-harness/: SKILL.md
deepclaw/default_skills/code-review/: SKILL.md
deepclaw/default_skills/deepclaw-development/: SKILL.md
deepclaw/default_skills/devin-review/: SKILL.md
deepclaw/default_skills/github-code-review/: SKILL.md
deepclaw/default_skills/github-pr-workflow/: SKILL.md
deepclaw/default_skills/langsmith-trace-regression-evals/: SKILL.md
deepclaw/default_skills/requesting-code-review/: SKILL.md
deepclaw/default_skills/skillify-pattern/: SKILL.md
deepclaw/default_skills/subagent-driven-development/: SKILL.md
deepclaw/default_skills/systematic-debugging/: SKILL.md
deepclaw/default_skills/test-driven-development/: SKILL.md
deepclaw/default_skills/verify-links-before-sending/: SKILL.md
deepclaw/default_skills/writing-plans/: SKILL.md
deepclaw/integrations/: __init__.py  baseten.py  deepinfra.py  fireworks.py
deepclaw/tools/: __init__.py  browser.py  browserbase.py  cron.py  memory.py  skills.py  tts.py  vision.py  web_search.py
docs/: deepclaw-context-architecture-post-pr30.md  deepclaw-context-engineering-redesign.md
docs/plans/: 2026-04-24-context-compaction-implementation.md
evals/: EXAMPLE_SCHEMA.md  README.md  compaction_regression.py  dataset_audit.py  example_filters.py  langsmith_pairwise.py  langsmith_regression.py  worker_run_case.py
evals/datasets/: deepclaw_seed_traces.json
issues/: telegram-rich-messages-followup.md
tests/: langsmith_trace_smoke.py  test_agent.py  test_approval_state.py  test_baseten_integration.py  test_bot.py  test_cli.py  test_compaction.py  test_compaction_regression.py  test_config.py  test_context_report.py  test_dataset_audit.py  test_deepinfra_integration.py  test_deepinfra_support.py  test_doctor.py  test_fireworks_integration.py  test_headroom.py  test_heartbeat.py  test_langsmith_pairwise.py  test_langsmith_regression.py  test_local_context.py  test_middleware.py  test_oauth.py  test_project_context.py  test_runtime_controller.py  test_safety.py  test_scheduler.py  test_service.py  test_sessions.py  test_skills_tool.py  test_state_continuity.py  test_tools.py  test_tools_cron.py  test_tools_memory.py  test_tts.py
wikis/inference/comparisons/: open-weight-reasoning-vs-sonnet-and-opus.md
