[project]
name = "deepclaw"
version = "0.1.0"
description = "Multi-platform AI agent gateway built on DeepAgents"
requires-python = ">=3.11,<4.0"
dependencies = [
    "deepagents>=0.5.4",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "deepagents-cli>=0.0.38",
    "python-telegram-bot>=22.0,<23.0",
    "langgraph-checkpoint-sqlite>=3.0.0,<4.0.0",
    "croniter>=2.0,<4.0",
    "browserbase>=1.7.0",
    "beautifulsoup4>=4.12.3",
    "stagehand>=0.5.14,<1.0.0",
    "playwright>=1.58.0",
    "ruff>=0.15.12",
    "langchain-community>=0.4.1",
    "langchain-baseten>=0.2.0",
]

[project.optional-dependencies]
web = ["tavily-python>=0.7.21,<1.0.0"]
dev = ["pytest>=9.0.3", "pytest-asyncio>=0.23"]

[project.scripts]
deepclaw = "deepclaw.cli:main"
deepclaw-tui = "deepagents_cli:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "/deepclaw/**/*.py",
    "/deepclaw/default_skills/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "/deepclaw/**/*.py",
    "/tests/**/*.py",
    "/pyproject.toml",
    "/README.md",
    "/deepclaw/default_skills/**",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "T20",  # flake8-print
    "PLW",  # pylint warnings
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "RET504", # unnecessary assignment before return
]

[tool.ruff.lint.isort]
known-first-party = ["deepclaw"]

